Layout bugs fixed

--- a/complexes.css
+++ b/complexes.css
@@ -65,7 +65,7 @@ body {
 
 .intro-title {
   margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 11px;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.4;
@@ -82,6 +82,7 @@ body {
 
 .intro-button {
   padding: 0.75rem 2rem;
+  border-radius: 2px;
   line-height: 1.0;
   font-family: "Fira Sans", "Helvetica Neue", "Lucida Sans Unicode", sans-serif;
   color: #fff;
@@ -153,7 +154,7 @@ body {
   font-size: 14px;
   line-height: 1.2;
   font-family: "Fira Sans", "Helvetica Neue", "Lucida Sans Unicode", sans-serif;
-  background-color: #111111;
+  background-color: #111;
 }
 
 .footer-heading {
